Fix: update videoSidebar styles for improved layout and readability

--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -114,19 +114,23 @@
 
 .videoSidebar {
   margin: 0 auto;
-  padding: 0.2rem;
-  border-bottom-left-radius: 12px;
-  border-bottom-right-radius: 12px;
-  border: 3px solid #0A8169;
-  background: #0A8169;
   display: flex;
   flex-direction: row;
-  gap: 0.5rem;
+  gap: 1.5rem;
   justify-content: center;
   width: fit-content;
+  margin-top: 1.5rem;
+}
+
+.containerVideoButton{
+  border: 3px solid #0A8169;
+  background: #0A8169;
+  border-radius: 12px;
+  padding: 0.35rem;
 }
 
 .videoSidebarButton {
+  border: #0A8169;
   border-radius: 12px;
   padding: 0rem;
   cursor: pointer;
@@ -156,7 +160,7 @@
 .videoLabels {
   display: flex;
   flex-direction: row;
-  gap: 0.5rem;
+  gap: 2.3rem;
   justify-content: center;
   margin-top: 1rem;
   width: 100%;
@@ -166,14 +170,15 @@
   width: 150px;
   text-align: center;
   color: rgba(255, 255, 255, 0.6);
-  font-size: 0.9rem;
+  font-size: 1rem;
   font-weight: 500;
   margin: 0;
   transition: all 0.3s ease;
+  color: #ffffff9f;
 }
 
 .activeLabel {
-  color: var(--evvm-teal);
+  color: var(--evvm-white);
   font-weight: 600;
 }
 
